# cse481-hello-robot

./: ArmNavigation.py  Driver.py  JointCommand.py  LICENSE  Main.py  README.md  package.xml
fun_healer_ws/src/fun_package/: lazy_rebuild.sh  setup.py
fun_healer_ws/src/fun_package/fun_package/: detect_body_landmarks.py  detection_2d_to_3d.py  detection_node.py  detection_ros_markers.py  fun_node_hm.py  fun_node_nothm.py  person_detector.py
fun_healer_ws/src/fun_package/fun_package/vision/: detect_body_landmarks.py  detection_2d_to_3d.py  detection_node.py  numba_image_to_pointcloud.py  person_detector.py
fun_healer_ws/src/fun_package/install/: local_setup.sh  setup.sh
fun_healer_ws/src/fun_package/install/fun_package/share/fun_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
fun_healer_ws/src/fun_package/launch/: body_landmarks.launch.py
fun_healer_ws/src/fun_package/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
healer/: FrameListener.py  InverseKinematics.py  Limb_joint_notes.txt  MovementExecutor.py  Trajectories.py  main.py
healer_ws_final/healer_ws/src/lotion_application/: CMakeLists.txt  Limb_joint_notes.txt  commands.txt  package.xml  stretch.urdf  web_interface.html
healer_ws_final/healer_ws/src/lotion_application/meshes/: link_straight_gripper.STL
healer_ws_final/healer_ws/src/lotion_application/nodes/: main.py
healer_ws_final/healer_ws/src/lotion_application/src/lotion_application/: InverseKinematics.py  MovementExecutor.py  TargetPoint.py  Trajectories.py
healer_ws_final/healer_ws/src/lotion_application_msgs/: CMakeLists.txt  package.xml
healer_ws_final/healer_ws/src/lotion_application_msgs/action/: CallRobot.action
msg/: ArmJointPos.msg  ArmLocation.msg  Rectangle.msg
srv/: ArmMotion.srv
