<?xml version="1.0"?>
<package format="2">
  <name>lotion_application</name>
  <version>0.1.0</version>
  <description>CSE 481 Capstone Project</description>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosbridge_server</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>usb_cam</depend>
  <!-- <build_depend>tf2_web_republisher</build_depend> -->
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>image_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>